--- a/app/views/births/multipleBirths2/childsDetails/02-place-of-birth.html
+++ b/app/views/births/multipleBirths2/childsDetails/02-place-of-birth.html
@@ -108,7 +108,7 @@ href: "javascript:window.history.back()"
               Building name
             </label>
             <input class="govuk-input govuk-!-width-two-thirds" id="childs-address-building-name" name="childsAddressBuildingName"
-              type="text" autocomplete="address-level2" value="{{ data.childsAddressBuildingName or 'Princess Anne hospital' }}">
+              type="text" autocomplete="address-level2" value="{{ data.childsAddressBuildingName or 'Princess Anne Hospital' }}">
           </div>
           <div class="govuk-form-group">
             <label class="govuk-label" for="childs-address-county">
