--- a/app/views/births/multipleBirths2/parentsDetails/fathers-name.html
+++ b/app/views/births/multipleBirths2/parentsDetails/fathers-name.html
@@ -45,10 +45,41 @@ href: "javascript:window.history.back()"
           <input class="govuk-input govuk-!-width-one-half" id="deceased-last-name" name="fathersLastName" type="text"
             value="{{ data.fathersLastName }}">
 
+         
+        </div>
+
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+              <h1 class="govuk-fieldset__heading">
+                Capitalise last name?
+              </h1>
+            </legend>
+            <div class="govuk-radios" data-module="govuk-radios">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" checked value="england">
+                <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
+                  Yes
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio" value="scotland">
+                <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
+                  No - print as typed
+                </label>
+              </div>
+            </div>
+          </fieldset>
+
+        
+        </div>
+
+        <div>
           <p class="govuk-body  govuk-!-margin-top-4">
             <a href="#" class="govuk-link">Add prefix or suffix</a>
           </p>
-        </div>
+        </div><br>
+
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="name-order-hint">
@@ -173,7 +204,8 @@ href: "javascript:window.history.back()"
 
       <div class="govuk-button-group">
         {{ govukButton({
-        text: "Save and return"
+        text: "Save and return",
+        href: "/births/multipleBirths2/tasks/index.html"
         }) }}
       </div>
 
