--- a/app/views/births/multipleBirths2/parentsDetails/mothers-name.html
+++ b/app/views/births/multipleBirths2/parentsDetails/mothers-name.html
@@ -33,24 +33,50 @@ href: "javascript:window.history.back()"
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--s" for="deceased-first-name">First name </label>
           <input class="govuk-input govuk-!-width-one-half" id="deceased-first-name" name="mothersFirstName" type="text"
-            value="{{ data.mothersFirstName or 'Haley' }}">
+            value="{{ data.mothersFirstName or 'Elizabeth' }}">
         </div>
 
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--s" for="deceased-middle-name">Middle names</label>
           <input class="govuk-input govuk-!-width-one-half" id="deceased-middle-name" name="mothersMiddleName"
-            type="text" value="{{ data.mothersMiddleName or 'Jennifer' }}">
+            type="text" value="{{ data.mothersMiddleName or '' }}">
         </div>
 
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--s" for="deceased-last-name">Last name</label>
           <input class="govuk-input govuk-!-width-one-half" id="deceased-last-name" name="mothersLastName" type="text"
-            value="{{ data.mothersLastName or 'MORA' }}">
-
-          <p class="govuk-body  govuk-!-margin-top-4">
-            <a href="#" class="govuk-link">Add prefix or suffix</a>
-          </p>
+            value="{{ data.mothersLastName or 'MARTINEZ LARA' }}">
         </div>
+
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+              <h1 class="govuk-fieldset__heading">
+                Capitalise last name?
+              </h1>
+            </legend>
+            <div class="govuk-radios" data-module="govuk-radios">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" checked value="england">
+                <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
+                  Yes
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio" value="scotland">
+                <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
+                  No - print as typed
+                </label>
+              </div>
+            </div>
+          </fieldset>
+        </div>
+
+        <div>
+         <p class="govuk-body  govuk-!-margin-top-4">
+          <a href="#" class="govuk-link">Add prefix or suffix</a>
+        </p>
+        </div><br>
 
         <div id="other-name-block" hidden>
           <div class="govuk-!-display-flex govuk-!-justify-content-space-between govuk-!-margin-bottom-2">
@@ -102,36 +128,18 @@ href: "javascript:window.history.back()"
             <input class="govuk-input govuk-!-width-one-half" id="last-name" name="last-name" type="text">
           </div>
 
+         <div>
           <p class="govuk-body">
             <a href="#" class="govuk-link">Add prefix or suffix</a>
-          </p>
-          <br>
+          </p> <br><br>
+         </div> 
+    
         </div>
 
-        <button type="button" class="govuk-button govuk-button--secondary"
-          onclick="document.getElementById('other-name-block').hidden = false;">
-          Add other names
-        </button><br>
-        <br>
 
 
 
-
-        <div class="govuk-form-group">
-          <label class="govuk-label govuk-label--s" for="prefix">
-            Maiden name
-          </label>
-          <input class="govuk-input govuk-!-width-one-half" id="mothersMaidenName" name="mothersMaidenName" type="text"
-            value="{{data['mothersMaidenName']}}">
-        </div>
-
-        <div class="govuk-form-group">
-          <label class="govuk-label govuk-label--s" for="suffix">
-            Last name at marriage (if different from maiden name)
-          </label>
-          <input class="govuk-input govuk-!-width-one-half" id="mothersLastMarriageName" name="mothersLastMarriageName"
-            type="text" value="{{data['mothersLastMarriageName']}}">
-        </div>
+    
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="name-order-hint">
@@ -190,6 +198,30 @@ href: "javascript:window.history.back()"
             </div>
           </fieldset>
         </div>
+
+
+        <button type="button" class="govuk-button govuk-button--secondary"
+          onclick="document.getElementById('other-name-block').hidden = false;">
+          Add other names
+        </button><br>
+        <br>
+
+        <div class="govuk-form-group">
+          <label class="govuk-label govuk-label--s" for="prefix">
+            Maiden name
+          </label>
+          <input class="govuk-input govuk-!-width-one-half" id="mothersMaidenName" name="mothersMaidenName" type="text"
+            value="{{data['mothersMaidenName']}}">
+        </div>
+
+        <div class="govuk-form-group">
+          <label class="govuk-label govuk-label--s" for="suffix">
+            Last name at marriage (if different from maiden name)
+          </label>
+          <input class="govuk-input govuk-!-width-one-half" id="mothersLastMarriageName" name="mothersLastMarriageName"
+            type="text" value="{{data['mothersLastMarriageName']}}">
+        </div>
+
       </div>
 
       <div class="govuk-button-group">
