--- a/app/views/births/multipleBirths2/parentsDetailsChild2/fathers-details-child2.html
+++ b/app/views/births/multipleBirths2/parentsDetailsChild2/fathers-details-child2.html
@@ -33,7 +33,7 @@ href: "javascript:window.history.back()"
           Place of birth
         </label>
         <input class="govuk-input govuk-!-width-one-half" id="fathersPlaceOfBirth" name="fathersPlaceOfBirth"
-          type="text" aria-describedby="fathersPlaceOfBirth-hint" aria-required="false" value="Madrid">
+          type="text" aria-describedby="fathersPlaceOfBirth-hint" aria-required="false" value="Mexico">
       </div>
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" id="fathersCountryOfBirth-fieldset" aria-required="false">
@@ -131,8 +131,8 @@ href: "javascript:window.history.back()"
         <label class="govuk-label govuk-fieldset__legend--s" for="fathersOccupation">
           Occupation
         </label>
-        <input class="govuk-input govuk-!-width-one-half" id="fathersOccupation" name="fathersOccupation" type="text"
-          aria-describedby="fathersOccupation-hint" aria-required="false" value="Customer Service Representative">
+        <input class="govuk-input govuk-!-width-two-thirds" id="fathersOccupation" name="fathersOccupation" type="text"
+          aria-describedby="fathersOccupation-hint" aria-required="false" value="Cleaner">
       </div>
       <br>
 
