--- a/app/views/births/multipleBirths2/submit/confirmation-page.html
+++ b/app/views/births/multipleBirths2/submit/confirmation-page.html
@@ -24,8 +24,11 @@
         You can now print the birth certificate.
       </p>
 
+      
+
+
        <p  class="govuk-body govuk-!-margin-bottom-9">
-        <a href="#">
+        <a href="/public/documents/320936a3-e187-43d1-8d27-585355f70545.pdf" target="_blank" class="govuk-link">
           View and print standard certificate (opens in a new tab)
         </a>
         <br>
@@ -39,7 +42,7 @@
         Do you want to register child 2?
       </h2>
       <p  class="govuk-body">
-        <a href="/births/multipleBirths/triageChild2/01-child2-who-is-informant.html">
+        <a href="/births/multipleBirths2/02-child2-correct.html">
           Continue to register child 2
         </a>
       </p>
