--- a/app/views/index.html
+++ b/app/views/index.html
@@ -15,22 +15,21 @@
      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
     <p>
-      <h3 class="govuk-heading-s" style="display: inline;">Round 1</h3>
-      <strong class="govuk-tag govuk-tag--yellow">In progress</strong>
+      <h3 class="govuk-heading-s" style="display: inline;">Multiple births</h3>
+      <strong class="govuk-tag govuk-tag--pink">In research</strong>
     </p>
      
      <p class="govuk-body">
-      <a href="/births/multipleBirths/00-sign-in.html">Task 1</a> – Registering twins with same informant
+      <a href="/births/multipleBirths/00-sign-in.html">Round 1</a> – Registering twins with same informant
     </p>
     
     <p class="govuk-body">
-      <a href="/births/multipleBirths2/00-sign-in.html">Task 2</a> – Testing content here - Niamh fix
+      <a href="/births/multipleBirths2/00-sign-in.html">Round 2</a> – Registering twins with same informant
     </p>
-
      <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 4: Niamh, Kaisa or Helen</p>
    </div>
      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-       <div class="govuk-!-margin-top-6 govuk-!-margin-bottom-6">
+       <div class="govuk-!-margin-top-2 govuk-!-margin-bottom-6">
        <form action="/clear-session" method="get">
          <button type="submit" class="govuk-button govuk-button--warning" data-module="govuk-button">
            Clear data
