--- a/app/views/births/multipleBirths2/02-child2-correct.html
+++ b/app/views/births/multipleBirths2/02-child2-correct.html
@@ -16,73 +16,9 @@ href: "javascript:window.history.back()"
   <div class="govuk-grid-column-two-thirds-from-desktop">
 
     <h1 class="govuk-heading-l">
-      Are these the children you want to register?
+      Is this the child you want to register?
     </h1>
-    <div class="header-with-button">
-      <h2 class="govuk-heading-m">Child 1</h2>
-    </div>
-    <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          NHS number
-        </dt>
-        <dd class="govuk-summary-list__value">
-          123 456 7890
-        </dd>
-        <dd class="govuk-summary-list__actions">
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Date and time of birth
-        </dt>
-        <dd class="govuk-summary-list__value">
-          1 October 2025 at 12:00 hours
-        </dd>
-        <dd class="govuk-summary-list__actions">
-
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Sex
-        </dt>
-        <dd class="govuk-summary-list__value">
-            Male
-        </dd>
-        <dd class="govuk-summary-list__actions">
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Mother's first name
-        </dt>
-        <dd class="govuk-summary-list__value">
-          Elizabeth
-        </dd>
-        <dd class="govuk-summary-list__actions">
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Mother's last name
-        </dt>
-        <dd class="govuk-summary-list__value">
-          MARTINEZ LARA
-        </dd>
-        <dd class="govuk-summary-list__actions">
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Place of birth
-        </dt>
-        <dd class="govuk-summary-list__value">
-          Princess Anne Hospital, Southampton
-        </dd>
-        <dd class="govuk-summary-list__actions">
-        </dd>
-      </div>
-    </dl>
+    
     <div class="header-with-button">
       <h2 class="govuk-heading-m">Child 2</h2>
     </div>
@@ -150,30 +86,11 @@ href: "javascript:window.history.back()"
       </div>
     </dl>
 
-    {{ govukRadios({
-    name: "whichChild",
-    fieldset: {
-    legend: {
-    text: "Which child do you want to register first?",
-    classes: "govuk-fieldset__legend--s"
-    }
-    },
-    items: [
-    {
-    value: "child1",
-    text: "Child 1",
-    checked: true
-    },
-    {
-    value: "child2",
-    text: "Child 2"
-    }
-    ]
-    }) }}
+    
 
     {{ govukButton({
-    text: "Continue",
-    href: "triage/01-who-is-informant"
+    text: "Yes, continue",
+    href: "/births/multipleBirths2/triageChild2/05-child2-check-details.html"
     }) }}
 
     <div class="govuk-form-group">
