--- a/app/views/births/multipleBirths2/child2Details/01-child2-name-date.html
+++ b/app/views/births/multipleBirths2/child2Details/01-child2-name-date.html
@@ -28,10 +28,98 @@ href: "javascript:window.history.back()"
   <div class="govuk-grid-column-two-thirds">
     <span class="govuk-caption-l">Child 2 details</span>
     <h1 class="govuk-heading-l">
-      Name, date of birth and sex
+      Sex, date of birth and name
     </h1>
 
     <form class="form" action="name-date-check" method="post">
+
+      <div class="govuk-form-group">
+        <fieldset class="govuk-fieldset">
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Sex</legend>
+          <div class="govuk-radios">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="sex-1" name="sex" type="radio" value="Female" {{
+                checked("sex", "Female" ) }} {% if not data.sex %} {% endif %}>
+              <label class="govuk-label govuk-radios__label" for="sex-1">Female</label>
+            </div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="sex-2" name="sex" type="radio" value="Male" {{
+                checked("sex", "Male" ) }}>
+              <label class="govuk-label govuk-radios__label" for="sex-2">Male</label>
+            </div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="sex-3" name="sex" type="radio" value="Indeterminate" {{
+                checked("sex", "Indeterminate" ) }}>
+              <label class="govuk-label govuk-radios__label" for="sex-3">Indeterminate</label>
+            </div>
+          </div>
+        </fieldset>
+      </div>
+
+      <div class="govuk-form-group">
+        <fieldset class="govuk-fieldset" role="group" aria-describedby="dob-hint">
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+            Date and time of birth
+          </legend>
+          <div id="dob-hint" class="govuk-hint">
+            For example, 23 11 2024
+          </div>
+      
+          <!-- Date row -->
+          <div class="govuk-date-input govuk-!-margin-bottom-3" id="dob-date">
+            <div class="govuk-date-input__item">
+              <div class="govuk-form-group">
+                <label class="govuk-label govuk-date-input__label" for="dob-day">Day</label>
+                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-day" name="dob-day" type="text" inputmode="numeric" value="1">
+              </div>
+            </div>
+            <div class="govuk-date-input__item">
+              <div class="govuk-form-group">
+                <label class="govuk-label govuk-date-input__label" for="dob-month">Month</label>
+                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-month" name="dob-month" type="text" inputmode="numeric" value="10">
+              </div>
+            </div>
+            <div class="govuk-date-input__item">
+              <div class="govuk-form-group">
+                <label class="govuk-label govuk-date-input__label" for="dob-year">Year</label>
+                <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="dob-year" name="dob-year" type="text" inputmode="numeric" value="2025">
+              </div>
+            </div>
+          </div>
+      
+          <!-- Time row -->
+          <div class="govuk-date-input" id="dob-time">
+            <div class="govuk-date-input__item">
+              <div class="govuk-form-group">
+                <label class="govuk-label govuk-date-input__label" for="dob-hour">Hours</label>
+                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-hour" name="dob-hour" type="text" inputmode="numeric" value="12">
+              </div>
+            </div>
+            <div class="govuk-date-input__item">
+              <div class="govuk-form-group">
+                <label class="govuk-label govuk-date-input__label" for="dob-minute">Minutes</label>
+                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-minute" name="dob-minute" type="text" inputmode="numeric" value="02">
+              </div>
+            </div>
+            <div class="govuk-date-input__item">
+              <div class="govuk-form-group">
+                <label class="govuk-label govuk-date-input__label" for="dob-second">Seconds</label>
+                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-second" name="dob-second" type="text" inputmode="numeric" value="02">
+              </div>
+            </div>
+            <div class="govuk-date-input__item">
+              <div class="govuk-form-group">
+                <label class="govuk-label govuk-date-input__label" for="dob-period">am / pm</label>
+                <select class="govuk-select govuk-input--width-2" id="dob-period" name="dob-period">
+                  <option value="PM">pm</option>
+                  <option value="AM">am</option>
+                </select>
+              </div>
+            </div>
+          </div>
+        </fieldset>
+      </div>
+
 
       <div id="yes-name-block">
         <div class="govuk-form-group">
@@ -52,9 +140,36 @@ href: "javascript:window.history.back()"
             value="{{data['child2-deceasedLastName']}}">
         </div>
 
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+              <h1 class="govuk-fieldset__heading">
+                Capitalise last name?
+              </h1>
+            </legend>
+            <div class="govuk-radios" data-module="govuk-radios">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" checked value="england">
+                <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
+                  Yes
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio" value="scotland">
+                <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
+                  No - print as typed
+                </label>
+              </div>
+            </div>
+          </fieldset>
+        </div>
+
+      <div>
         <p class="govuk-body">
-          <a href="#" class="govuk-link">Add prefix or suffix</a>
-        </p>
+        <a href="#" class="govuk-link">Add prefix or suffix</a>
+      </p>
+
+      </div><br>
 
 
         <div class="govuk-form-group">
@@ -112,90 +227,10 @@ href: "javascript:window.history.back()"
       </div>
 
 
-      <div class="govuk-form-group">
-        <fieldset class="govuk-fieldset" role="group" aria-describedby="dob-hint">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-            Date and time of birth
-          </legend>
-          <div id="dob-hint" class="govuk-hint">
-            For example, 23 11 2024
-          </div>
+      
 
-          <!-- Date row -->
-          <div class="govuk-date-input govuk-!-margin-bottom-3" id="dob-date">
-            <div class="govuk-date-input__item">
-              <div class="govuk-form-group">
-                <label class="govuk-label govuk-date-input__label" for="dob-day">Day</label>
-                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-day" name="dob-day"
-                  type="text" inputmode="numeric" value="1">
-              </div>
-            </div>
-            <div class="govuk-date-input__item">
-              <div class="govuk-form-group">
-                <label class="govuk-label govuk-date-input__label" for="dob-month">Month</label>
-                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-month" name="dob-month"
-                  type="text" inputmode="numeric" value="10">
-              </div>
-            </div>
-            <div class="govuk-date-input__item">
-              <div class="govuk-form-group">
-                <label class="govuk-label govuk-date-input__label" for="dob-year">Year</label>
-                <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="dob-year" name="dob-year"
-                  type="text" inputmode="numeric" value="2025">
-              </div>
-            </div>
-          </div>
-
-          <div class="govuk-date-input" id="dob-time">
-            <div class="govuk-date-input__item">
-              <div class="govuk-form-group">
-                <label class="govuk-label govuk-date-input__label" for="dob-hour">Hours</label>
-                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-hour" name="dob-hour"
-                  type="text" inputmode="numeric" value="12">
-              </div>
-            </div>
-            <div class="govuk-date-input__item">
-              <div class="govuk-form-group">
-                <label class="govuk-label govuk-date-input__label" for="dob-minute">Minutes</label>
-                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-minute"
-                  name="dob-minute" type="text" inputmode="numeric" value="00">
-              </div>
-            </div>
-            <div class="govuk-date-input__item">
-              <div class="govuk-form-group">
-                <label class="govuk-label govuk-date-input__label" for="dob-period">am / pm</label>
-                <select class="govuk-select time-select" id="dob-period" name="dob-period">
-                  <option value="AM">pm</option>
-                  <option value="PM">am</option>
-                </select>
-              </div>
-            </div>
-          </div>
-        </fieldset>
-      </div>
-
-      <div class="govuk-form-group">
-        <fieldset class="govuk-fieldset">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Sex</legend>
-          <div class="govuk-radios">
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="sex-1" name="sex" type="radio" value="Female" {{
-                checked("sex", "Female" ) }} {% if not data.sex %}checked="checked" {% endif %}>
-              <label class="govuk-label govuk-radios__label" for="sex-1">Female</label>
-            </div>
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="sex-2" name="sex" type="radio" value="Male" {{
-                checked("sex", "Male" ) }}>
-              <label class="govuk-label govuk-radios__label" for="sex-2">Male</label>
-            </div>
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="sex-3" name="sex" type="radio" value="Indeterminate" {{
-                checked("sex", "Indeterminate" ) }}>
-              <label class="govuk-label govuk-radios__label" for="sex-3">Indeterminate</label>
-            </div>
-          </div>
-        </fieldset>
-      </div>
+          
+      
 
       <div class="govuk-button-group">
         {{ govukButton({
