--- a/app/views/births/multipleBirths2/parentsDetailsChild2/fathers-name-child2.html
+++ b/app/views/births/multipleBirths2/parentsDetailsChild2/fathers-name-child2.html
@@ -32,13 +32,13 @@ href: "javascript:window.history.back()"
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--s" for="deceased-first-name">First name </label>
           <input class="govuk-input govuk-!-width-one-half" id="deceased-first-name" name="fathersFirstName" type="text"
-            value="Pedro">
+            value="Luis">
         </div>
 
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--s" for="deceased-middle-name">Middle names</label>
           <input class="govuk-input govuk-!-width-one-half" id="deceased-middle-name" name="fathersMiddleName"
-            type="text" value="{{data['fathersMiddleName']}}">
+            type="text" value="Felipe">
           <!-- <p class="govuk-body">
                 <a href="#" class="govuk-link">Add more middle names</a>
               </p> -->
@@ -47,12 +47,40 @@ href: "javascript:window.history.back()"
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--s" for="deceased-last-name">Last name</label>
           <input class="govuk-input govuk-!-width-one-half" id="deceased-last-name" name="fathersLastName" type="text"
-            value="MORA">
+            value="PEREZ ROSARIO">
 
+      
+        </div>
+
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+              <h1 class="govuk-fieldset__heading">
+                Capitalise last name?
+              </h1>
+            </legend>
+            <div class="govuk-radios" data-module="govuk-radios">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" checked value="england">
+                <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
+                  Yes
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio" value="scotland">
+                <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
+                  No - print as typed
+                </label>
+              </div>
+            </div>
+          </fieldset>
+        </div>
+
+        <div>
           <p class="govuk-body  govuk-!-margin-top-4">
             <a href="#" class="govuk-link">Add prefix or suffix</a>
           </p>
-        </div>
+        </div><br>
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="name-order-hint">
@@ -110,69 +138,11 @@ href: "javascript:window.history.back()"
           </fieldset>
         </div>
 
-        <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset">
-            <div class="govuk-!-margin-bottom-2" style="display: flex; align-items: baseline; gap: 10px;">
-              <span class="govuk-fieldset__legend govuk-fieldset__legend--s">Other name 1</span>
-              <p class="govuk-body"><a href="#" class="govuk-link">Remove</a></p>
-            </div>
-          </fieldset>
-          <br>
-          <legend class="govuk-fieldset__legend">
-            Type of name
-          </legend>
-          <div class="govuk-radios" data-module="govuk-radios">
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="otherNames" name="otherNames" type="radio" value="Otherwise" checked>
-              <label class="govuk-label govuk-radios__label" for="otherNames" >
-                Otherwise
-              </label>
-            </div>
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="otherNames-2" name="otherNames" type="radio"
-                value="scotland" >
-              <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
-                Formerly known as
-              </label>
-            </div>
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="otherNames-3" name="otherNames" type="radio" value="wales">
-              <label class="govuk-label govuk-radios__label" for="whereDoYouLive-3">
-                Now
-              </label>
-            </div>
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="otherNames-4" name="otherNames" type="radio"
-                value="northern-ireland">
-              <label class="govuk-label govuk-radios__label" for="whereDoYouLive-4">
-                Afterwards
-              </label>
-            </div>
-          </div>
-          </fieldset>
-        </div>
+       
+        
 
-        <div class="govuk-form-group">
-          <label class="govuk-label govuk-label--s" for="deceased-first-name">First name </label>
-          <input class="govuk-input govuk-!-width-one-half" id="deceased-first-name" name="fathersFirstName" type="text"
-            value="Pedro">
-        </div>
-
-        <div class="govuk-form-group">
-          <label class="govuk-label govuk-label--s" for="deceased-middle-name">Middle names</label>
-          <input class="govuk-input govuk-!-width-one-half" id="deceased-middle-name" name="fathersMiddleName"
-            type="text" value="{{data['fathersMiddleName']}}">
-        </div>
-
-        <div class="govuk-form-group">
-          <label class="govuk-label govuk-label--s" for="deceased-last-name">Last name</label>
-          <input class="govuk-input govuk-!-width-one-half" id="deceased-last-name" name="fathersLastName" type="text"
-            value="MORA SANCHEZ">
-
-          <p class="govuk-body  govuk-!-margin-top-4">
-            <a href="#" class="govuk-link">Add prefix or suffix</a>
-          </p>
-        </div>
+        
+        
 
         <div class="govuk-form-group">
             <div class="govuk-form-group">
