--- a/app/views/births/multipleBirths2/submitChild2/check-answers-page-child2.html
+++ b/app/views/births/multipleBirths2/submitChild2/check-answers-page-child2.html
@@ -28,7 +28,7 @@ href: "javascript:window.history.back()"
           Date and time of birth
         </dt>
         <dd class="govuk-summary-list__value">
-          First October 2025, 12:00pm
+          First October 2025, 12:02 hours
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="/births/multipleBirths2/child2Details/01-child2-name-date.html">Change<span
@@ -51,7 +51,7 @@ href: "javascript:window.history.back()"
           Name
         </dt>
         <dd class="govuk-summary-list__value">
-          Anna MORA
+          Anna MARTINEZ LARA
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> customer reference</span></a>
@@ -80,7 +80,7 @@ href: "javascript:window.history.back()"
           Name
         </dt>
         <dd class="govuk-summary-list__value">
-          Haley Jennifer MORA
+          Elizabeth MARTINEZ LARA
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="/births/multipleBirths2/childsDetails/01-name-date.html">Change<span
@@ -92,7 +92,7 @@ href: "javascript:window.history.back()"
           Place of birth
         </dt>
         <dd class="govuk-summary-list__value">
-          Nottingham
+          Mexico
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> date of birth</span></a>
@@ -103,7 +103,7 @@ href: "javascript:window.history.back()"
           Occupation
         </dt>
         <dd class="govuk-summary-list__value">
-          Florist
+          Cleaner
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> customer reference</span></a>
@@ -114,21 +114,10 @@ href: "javascript:window.history.back()"
           Maiden name
         </dt>
         <dd class="govuk-summary-list__value">
-          SMITH
+          
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> address</span></a>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Occupation
-        </dt>
-        <dd class="govuk-summary-list__value">
-          Florist
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> customer reference</span></a>
         </dd>
       </div>
       <div class="govuk-summary-list__row">
@@ -144,7 +133,7 @@ href: "javascript:window.history.back()"
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">
-          Address
+          Address (if different from child’s place of birth)
         </dt>
         <dd class="govuk-summary-list__value">
           23 West Drive, Eastleigh
@@ -165,7 +154,7 @@ href: "javascript:window.history.back()"
           Name
         </dt>
         <dd class="govuk-summary-list__value">
-          Pedro MORA otherwise Pedro MORA SANCHEZ
+          Luis Felipe PEREZ ROSARIO
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="/births/multipleBirths2/childsDetails/01-name-date.html">Change<span
@@ -177,7 +166,7 @@ href: "javascript:window.history.back()"
           Place of birth
         </dt>
         <dd class="govuk-summary-list__value">
-          Madrid
+          Mexico
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> date of birth</span></a>
@@ -188,21 +177,10 @@ href: "javascript:window.history.back()"
           Occupation
         </dt>
         <dd class="govuk-summary-list__value">
-          Customer Service Representative
+          Cleaner
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> customer reference</span></a>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Address
-        </dt>
-        <dd class="govuk-summary-list__value">
-          23 West Drive, Eastleigh
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> address</span></a>
         </dd>
       </div>
     </dl>
@@ -219,9 +197,16 @@ href: "javascript:window.history.back()"
         <dd class="govuk-summary-list__value">
           Father
         </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+         Father's address
+        </dt>
+        <dd class="govuk-summary-list__value">
+          23 West Drive, Eastleigh
+        </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="/births/multipleBirths2/childsDetails/01-name-date.html">Change<span
-              class="govuk-visually-hidden"> name</span></a>
+          <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> address</span></a>
         </dd>
       </div>
     </dl>
@@ -266,40 +251,22 @@ href: "javascript:window.history.back()"
         </dd>
       </div>
     </dl>
+   
+   <!-- 
     <p class="govuk-body">
       <a href="/public/documents/d476d40d-dea3-48d6-8e8f-e985a53564c1.pdf" target="_blank" class="govuk-link">
         Print
       </a>
     </p>
+  -->
     
-    <div class="govuk-grid-row govuk-grid-column-full">
-      {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
-
-      {{ govukCheckboxes({
-      name: "waste",
-      fieldset: {
-      legend: {
-      text: " ",
-      isPageHeading: false,
-      classes: "govuk-body"
-      }
-      },
-
-      items: [
-      {
-      value: "farm",
-      text: "Confirm register entry"
-      }
-      ]
-      }) }}
-    </div>
-
+    
 
 
     <form action="sign-page-child2" method="post" novalidate>
 
       {{ govukButton({
-      text: "Continue"
+      text: "Confirm register entry"
       }) }}
 
     </form>
