--- a/app/views/births/multipleBirths2/submitChild2/confirmation-page-child2.html
+++ b/app/views/births/multipleBirths2/submitChild2/confirmation-page-child2.html
@@ -20,12 +20,37 @@
         What to do next
       </h2> 
 -->
+
+<p class="govuk-body">
+  <a href="/public/documents/d476d40d-dea3-48d6-8e8f-e985a53564c1.pdf" target="_blank" class="govuk-link">
+    Print
+  </a>
+</p>
+
+
       <p class="govuk-body">
         You can now print the birth certificate.
       </p>
         <br>
+        <label class="govuk-label govuk-label--s" for="example-2">
+          Child 1
+        </label><br>
        <p  class="govuk-body govuk-!-margin-bottom-9">
+        <a href="/public/documents/Oliver-birth-certificate.pdf" target="_blank" class="govuk-link">
+          View and print standard certificate (opens in a new tab)
+        </a>
+        <br>
+        <br>
         <a href="#">
+          View and print short certificate (opens in a new tab)
+        </a>
+      </p> 
+      <label class="govuk-label govuk-label--s" for="example-2">
+        Child 2
+      </label>
+      <br>
+       <p  class="govuk-body govuk-!-margin-bottom-9">
+        <a href="/public/documents/Anna-birth-certificate.pdf" target="_blank" class="govuk-link">
           View and print standard certificate (opens in a new tab)
         </a>
         <br>
