--- a/app/views/births/multipleBirths2/tasks/child2index.html
+++ b/app/views/births/multipleBirths2/tasks/child2index.html
@@ -23,11 +23,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           </a>
         </div>
         <div class="govuk-task-list__status">
-          {% if data.child2PlaceCompleted %}
           Completed
-          {% else %}
-          <strong class="govuk-tag govuk-tag--pink">Review</strong>
-          {% endif %}
         </div>
       </li>
 
@@ -35,7 +31,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link"
             href="/births/multipleBirths2/child2Details/01-child2-name-date.html">
-            Name, date of birth and sex
+            Sex, date of birth and name
           </a>
         </div>
         <div class="govuk-task-list__status">
@@ -58,11 +54,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           </a>
         </div>
         <div class="govuk-task-list__status">
-          {% if data.child2MothersNameCompleted %}
           Completed
-          {% else %}
-          <strong class="govuk-tag govuk-tag--pink">Review</strong>
-          {% endif %}
         </div>
       </li>
 
@@ -74,11 +66,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           </a>
         </div>
         <div class="govuk-task-list__status">
-          {% if data.child2MothersDetailsCompleted %}
           Completed
-          {% else %}
-          <strong class="govuk-tag govuk-tag--pink">Review</strong>
-          {% endif %}
         </div>
       </li>
       <li class="govuk-task-list__item">
@@ -89,11 +77,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           </a>
         </div>
         <div class="govuk-task-list__status">
-          {% if data.child2FathersNameCompleted %}
           Completed
-          {% else %}
-          <strong class="govuk-tag govuk-tag--pink">Review</strong>
-          {% endif %}
         </div>
       </li>
 
@@ -105,11 +89,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           </a>
         </div>
         <div class="govuk-task-list__status">
-          {% if data.child2FathersDetailsCompleted %}
           Completed
-          {% else %}
-          <strong class="govuk-tag govuk-tag--pink">Review</strong>
-          {% endif %}
         </div>
       </li>
     </ul>
@@ -123,11 +103,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           </a>
         </div>
         <div class="govuk-task-list__status">
-          {% if data.child2StatsConfidentialCompleted %}
           Completed
-          {% else %}
-          <strong class="govuk-tag govuk-tag--pink">Review</strong>
-          {% endif %}
         </div>
       </li>
 
@@ -138,11 +114,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           </a>
         </div>
         <div class="govuk-task-list__status">
-          {% if data.child2StatsVoluntaryCompleted %}
           Completed
-          {% else %}
-          <strong class="govuk-tag govuk-tag--pink">Review</strong>
-          {% endif %}
         </div>
       </li>
     </ul>
@@ -152,7 +124,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths2/additionalInfoChild2/commentsChild2">
-            Comments</a>
+            Registrar's comments</a>
         </div>
         <div class="govuk-task-list__status">
           <strong class="govuk-tag govuk-tag--yellow">Optional</strong>
