--- a/app/views/births/multipleBirths2/triage/02-evidence.html
+++ b/app/views/births/multipleBirths2/triage/02-evidence.html
@@ -24,7 +24,7 @@ href: "javascript:window.history.back()"
       name: "evidence",
       fieldset: {
       legend: {
-      text: "Has registrar seen evidence of informant identity?",
+      text: "Has registrar seen evidence of informant's identity?",
       isPageHeading: true,
       classes: "govuk-fieldset__legend--l"
       }
@@ -32,7 +32,7 @@ href: "javascript:window.history.back()"
       items: [
       {
       value: "yes",
-      text: "Yes - informant's passport, or their birth certificate and photo ID"
+      text: "Yes"
       },
       {
       value: "no",
